{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 63,
  "lineage": "5fc3c312-fe3c-4f64-efb1-498d22943f35",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014709138691:internet-gateway/igw-0ad269d10ed60712b",
            "id": "igw-0ad269d10ed60712b",
            "owner_id": "014709138691",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-igw"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-igw"
            },
            "vpc_id": "vpc-00de5fd61d0ad05a1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014709138691:route-table/rtb-0acc7add48d80dd28",
            "id": "rtb-0acc7add48d80dd28",
            "owner_id": "014709138691",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad269d10ed60712b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-route-table"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00de5fd61d0ad05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-013c174bcc5b579f9",
            "route_table_id": "rtb-0acc7add48d80dd28",
            "subnet_id": "subnet-02fe46ef23cf2b0cf"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_a",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e961f31f2528a9f6",
            "route_table_id": "rtb-0acc7add48d80dd28",
            "subnet_id": "subnet-077525ef19ccf4a47"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnet_b",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014709138691:security-group/sg-0df4dfd772b0f5155",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df4dfd772b0f5155",
            "ingress": [],
            "name": "demo-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "014709138691",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00de5fd61d0ad05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014709138691:security-group/sg-0ea69f99cf5ab67f3",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea69f99cf5ab67f3",
            "ingress": [],
            "name": "demo-eks-node-sg",
            "name_prefix": "",
            "owner_id": "014709138691",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-node-sg",
              "kubernetes.io/cluster/demo-eks": "owned"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-node-sg",
              "kubernetes.io/cluster/demo-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00de5fd61d0ad05a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_to_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow cluster to communicate with nodes",
            "from_port": 1025,
            "id": "sgrule-2968776415",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ea69f99cf5ab67f3",
            "security_group_rule_id": "sgr-0d9c01c792e156daf",
            "self": false,
            "source_security_group_id": "sg-0df4dfd772b0f5155",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with each other",
            "from_port": 0,
            "id": "sgrule-492073046",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0ea69f99cf5ab67f3",
            "security_group_rule_id": "sgr-0701e55a9d36b749f",
            "self": false,
            "source_security_group_id": "sg-0ea69f99cf5ab67f3",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_nodes",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nodes_to_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-3970309670",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0df4dfd772b0f5155",
            "security_group_rule_id": "sgr-095ef40a34c7267cc",
            "self": false,
            "source_security_group_id": "sg-0ea69f99cf5ab67f3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_security_group.eks_nodes",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014709138691:subnet/subnet-02fe46ef23cf2b0cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02fe46ef23cf2b0cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014709138691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-subnet-a",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-subnet-a",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00de5fd61d0ad05a1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014709138691:subnet/subnet-077525ef19ccf4a47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077525ef19ccf4a47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014709138691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-subnet-b",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-subnet-b",
              "kubernetes.io/cluster/demo-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00de5fd61d0ad05a1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014709138691:vpc/vpc-00de5fd61d0ad05a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9ab53e62b8240fa",
            "default_route_table_id": "rtb-0a21de38cd7a5f4da",
            "default_security_group_id": "sg-0ed3a15ae183fe8b0",
            "dhcp_options_id": "dopt-07df1a2d1c92fd2c5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00de5fd61d0ad05a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a21de38cd7a5f4da",
            "owner_id": "014709138691",
            "tags": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-vpc",
              "kubernetes.io/cluster/demo-eks": "shared"
            },
            "tags_all": {
              "Environment": "demo",
              "ManagedBy": "terraform",
              "Name": "demo-eks-vpc",
              "kubernetes.io/cluster/demo-eks": "shared"
            }
          }
        }
      ]
    }
  ]
}